# pynavigo

./: .gitignore  pyproject.toml  runserver.py
pynavigo/: OSM2SimpleGraph.py  __init__.py  dijkstra.py  graphloader.py  isolated.py  maxspeed.py  priodict.py  simpleGraph.py  utils.py  views.py
pynavigo/cfg/: clients.cfg  maxspeed.cfg  metz-little.cfg  trips-cedric-2.cfg  trips-cedric-3.cfg  trips-cedric.cfg
pynavigo/static/css/: style.css
pynavigo/static/js/: scripts.js
pynavigo/templates/: index.html
pynavigo/var/: luxembourg-little.osm.dump
